[package]
name = "x402-example"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl.workspace = true
solana-program.workspace = true
spl-token.workspace = true
x402-macros = { path = "../x402-macros" }

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
